--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "fuse.js": "^7.1.0",
     "mongoose": "^8.16.1",
     "tesseract.js": "^6.0.1"
   },
